2007-12-18  Peter Bloomfield

	* libbalsa/filter.c: (libbalsa_condition_matches): new
	content2reply api.
	* libbalsa/mailbox_local.c: (message_match_real): ditto.
	* libbalsa/mime.c: (process_mime_part, process_mime_multipart,
	content2reply): remove charset callback.
	* libbalsa/mime.h: ditto.
	* src/balsa-app.c: (balsa_app_init): new member
	BalsaApp::spell_check_active; make spell modules conditional.
	* src/balsa-app.h:
	* src/save-restore.c: (config_global_load, config_save): manage
	BalsaApp::spell_check_active.
	* src/sendmsg-window.c: simplify charset and spell-checker
	handling.
	* src/sendmsg-window.h: remove newly redundant members in
	BalsaSendmsg.

2007-12-16  Pawel Salek

	* src/balsa-index.c: check in idle functions whether the model
	still exists.
	* src/sendmsg-window.c: do not go beyond the end of the string.

2007-12-16  Peter Bloomfield

	* src/main-window.c: (bw_notebook_label_new): use
	gtk_widget_set_size_request for the button instead of a signal
	callback.

2007-12-14  Peter Bloomfield

	* src/main-window.c: (bw_notebook_label_new): drop redundant
	event box.
	* libbalsa/imap/imap-handle.c: (imap_get_address): unfold
	address string.
	* libbalsa/mailbox_imap.c: (get_struct_from_cache): crlf-filter
	the message.

2007-12-13  Peter Bloomfield

	* libbalsa/mailbox_imap.c:
	(internet_address_new_from_imap_address,
	internet_address_new_list_from_imap_address_list): handle RFC
	2822 groups.

2007-12-13  Albrecht Dreß

	* libbalsa/imap/imap-handle.c: (imap_envelope_from_stringi):
	compile fix.

2007-12-13  Peter Bloomfield

	* images/16x16/balsa-drop-down.png: new icon, used to signify that
	the list of recipient types in address-view is a drop-down list.
	* libbalsa/address-view.c: (libbalsa_address_view_finalize,
	lbav_ensure_blank_line, lbav_add_from_list,
	lbav_button_activated_cb, libbalsa_address_view_new,
	libbalsa_address_view_set_book_icon,
	libbalsa_address_view_set_close_icon,